--- a/frontend/src/app/notification-page/notification-page.component.html
+++ b/frontend/src/app/notification-page/notification-page.component.html
@@ -1,1 +1,14 @@
-<p>notification-page works!</p>
+<app-header></app-header>
+<div class="noti-main">
+    <div class="recent">
+        <div class="top">
+            Recent
+        </div>
+        <mat-divider></mat-divider>
+        <div class="noification1y1">
+            <div class="notification" *ngFor="let notif of notifications">
+                <span routerLink="/dev/:id">{{notif.name}}</span>
+            </div>
+        </div>
+    </div>
+</div>
