--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="second-half">    
             <mat-icon class="icon" routerLink="/dev/feed" aria-hidden="true" aria-label="home">home</mat-icon>
-            <mat-icon class="icon" aria-hidden="false" aria-label="people">people</mat-icon>
+            <mat-icon class="icon" routerLink="/dev/:id/network" aria-hidden="false" aria-label="people">people</mat-icon>
             <mat-icon class="icon" aria-hidden="false" aria-label="people">work</mat-icon>
             <mat-icon class="icon" routerLink="/dev/:id/notification" aria-hidden="false" aria-label="notification">notifications</mat-icon>
             <mat-icon class="icon" routerLink="/message" aria-hidden="false" aria-label="message">message</mat-icon>
