--- a/frontend/src/app/header-c/header-c.component.html
+++ b/frontend/src/app/header-c/header-c.component.html
@@ -6,9 +6,9 @@
     </div>
     <div class="second-half">    
             <mat-icon class="icon" routerLink="/company/:id/feed" aria-hidden="true" aria-label="home">home</mat-icon>
-            <mat-icon class="icon" aria-hidden="false" aria-label="people">people</mat-icon>
+            <mat-icon class="icon" routerLink="/company/:id/network" aria-hidden="false" aria-label="people">people</mat-icon>
             <mat-icon class="icon" routerLink="/company/:id/manage" aria-hidden="false" aria-label="people">business_center</mat-icon>
-            <mat-icon class="icon" aria-hidden="false" aria-label="notification">notifications</mat-icon>
+            <mat-icon class="icon" routerLink="/company/:id/cnotification" aria-hidden="false" aria-label="notification">notifications</mat-icon>
             <mat-icon class="icon" routerLink="/company/:id/message" aria-hidden="false" aria-label="message">message</mat-icon>
             <mat-icon class="icon" routerLink="/company/:id" aria-hidden="false" aria-label="message">mood</mat-icon>
     </div>
