--- a/frontend/src/app/messagin-c/messagin-c.component.css
+++ b/frontend/src/app/messagin-c/messagin-c.component.css
@@ -47,11 +47,11 @@
     min-width: 150px;
     max-width: 500px;
     width: 100%;
-  }
+}
   
-  .search-full-width {
+.search-full-width {
     width: 100%;
-  }
+}
 .contect-list{
     width: 100%;
     padding:0px;
@@ -117,3 +117,12 @@
     border-right: rgb(161, 161, 159);
     border-left: rgb(161, 161, 159);
 }
+.ayush{
+    float: left;
+    font-size: 20px;
+}
+
+.applyPanelOverride{
+  height:40px;
+}
+
