--- a/frontend/src/app/messaging-page/messaging-page.component.css
+++ b/frontend/src/app/messaging-page/messaging-page.component.css
@@ -18,6 +18,7 @@
     margin-left: 90px;
     width:29%;
     border: 1px solid rgb(136, 136, 136);
+    border-right: 1px solid transparent;
     box-shadow: 0px 3px 10px rgb(148, 143, 143);
     min-height:300px ;
 }
