frontend updated with http service commit

--- a/frontend/src/app/feed/feed.component.html
+++ b/frontend/src/app/feed/feed.component.html
@@ -39,7 +39,7 @@
                 </div>
                
                 <div class="post-btn">
-                    <button   mat-flat-button color="accent">Post</button>
+                    <button (click)="uploaddp()"  mat-flat-button color="accent">Post</button>
                 </div>
             </div>
         </div>
